# django-lifespan

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff_defaults.toml  taplo.toml
.github/workflows/: release.yml  tests.yml
src/django_lifespan/: __init__.py  consumer.py  registry.py
